# django-postal-codes

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml
django_postal_codes/: __init__.py  apps.py  models.py
django_postal_codes/api/: filters.py  serializers.py  urls.py  views.py
django_postal_codes/data_pipelines/: base.py
django_postal_codes/data_pipelines/portugal/: __main__.py  azores_central.gpkg  azores_ocidental.gpkg  azores_oriental.gpkg  caop2021.xls
django_postal_codes/locale/pt/LC_MESSAGES/: django.mo  django.po
django_postal_codes/management/commands/: import_postal_codes.py
django_postal_codes/migrations/: 0001_initial.py  0002_alter_country_options_alter_county_options_and_more.py  0003_alter_country_id_alter_county_id_alter_district_id_and_more.py  0003_alter_postalcode_artery_local_and_more.py
