[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "django-postal-codes"
version = "0.0.1"
authors = [
  { name="Diogo Silva", email="diogosilv30@gmail.com" },
]
description = "A package that adds data-ready geographic APIs to your project with administrative regions and postal codes of a country"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/diogosilva30/django-postal-codes"
"Bug Tracker" = "https://github.com/diogosilva30/django-postal-codes/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
